--- a/styles/index.css
+++ b/styles/index.css
@@ -788,12 +788,22 @@ footer {
   flex-wrap: wrap;
   margin: 1.5rem 0 0;
   padding-top: 2rem;
-  justify-content: space-between;
+  position: relative;
   background-color: #e4e4e4;
 }
 @media (min-width: 600px) {
   footer {
-    padding-top: 2.5rem;
+    padding: 2.5rem 3rem 0 3rem;
+  }
+}
+@media (min-width: 1024px) {
+  footer {
+    padding: 2.5rem 3rem 0 3rem;
+  }
+}
+@media (min-width: 1440px) {
+  footer {
+    padding: 2.5rem 6.5rem 0 6.5rem;
   }
 }
 footer .brand {
@@ -810,6 +820,7 @@ footer .site-links {
   flex-basis: 25%;
 }
 footer .site-links p {
+  width: 20ch;
   margin-top: 0;
   font-weight: 500;
   border-bottom: 1px solid #000;
@@ -822,6 +833,8 @@ footer .site-links li a {
   color: #000;
 }
 footer .footer-social {
+  position: absolute;
+  left: 50%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
